# AutomaLarWEB

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  README.md  commitlint.config.js  docker-compose.yml  manifest.json  package.json
.devcontainer/: .env.template  (+5 more)
.roo/cognee/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini
.roo/cognee/src/: __init__.py  client.py  custom_cognee_datapoints.py  custom_dev_retriever.py  dev_code_analysis_prompt.txt  dev_code_analysis_user_prompt.txt  dev_code_retrieval_system.txt  dev_code_retrieval_user.txt  main.py  new_server.py  parser.py  retriever.py  server.py  test.py
.roo/cognee/src/parser/: __init__.py  chunking.py  cognee_adapter.py  config.py  configs.py  custom_datapoints.py  discovery.py  dispatcher.py  entities.py  git_utils.py  graph_enhancement_engine.py  graph_utils.py  orchestrator.py  test_utils.py  utils.py
.roo/cognee/src/parser/parsers/: __init__.py  base_parser.py  c_parser.py  cpp_parser.py  css_parser.py  dockerfile_parser.py  generic_parser.py  javascript_parser.py  markdown_parser.py  python_parser.py  rust_parser.py  treesitter_setup.py  typescript_parser.py
.roo/cognee/tests/: __init__.py  conftest.py  shared_test_utils.py
.roo/cognee/tests/parser/: __init__.py  conftest.py  test_chunking.py  test_cognee_adapter.py  test_custom_datapoints.py  test_discovery.py  test_entities.py  test_git_utils.py  test_main.py  test_orchestrator.py  test_utils.py
.roo/cognee/tests/parser/parsers/: __init__.py  test_base_parser.py  test_c_parser.py  test_cpp_parser.py  test_css_parser.py  test_dockerfile_parser.py  test_javascript_parser.py  test_markdown_parser.py  test_python_parser.py  test_rust_parser.py  test_typescript_parser.py
.roo/cognee/tests/parser/test_data/c/: header.h  simple_function.c
.roo/cognee/tests/parser/test_data/cpp/: calls_specific.cpp  closely_packed_definitions.cpp  comments_only_file.cpp  complex_features.cpp  inheritance_variations.cpp  inheritance_variations.hpp  my_class.hpp  simple_class.cpp  slicing_edge_cases.cpp
.roo/cognee/tests/parser/test_data/css/: style.css
.roo/cognee/tests/parser/test_data/dockerfile/: Dockerfile
.roo/cognee/tests/parser/test_data/javascript/: class_with_imports.js  simple_function.js
.roo/cognee/tests/parser/test_data/markdown/: component_doc.mdx  document.md
.roo/cognee/tests/parser/test_data/python/: class_with_imports.py  simple_function.py
(+57 files in other folders)
