[project]
name = "cognee-mcp"
version = "0.1.0"
description = "A MCP server project"
requires-python = ">=3.10"

dependencies = [
    "cognee[codegraph,gemini,huggingface]",
    "mcp==1.2.1",
    "uv>=0.6.3",
    "google-generativeai>=0.8.3",
    # Parser dependencies
    "tree-sitter>=0.24.0,<0.25.0",
    "tree-sitter-python~=0.21.0",
    "tree-sitter-javascript~=0.20.0",
    "tree-sitter-typescript~=0.23.0",
    "tree-sitter-c~=0.21.0",
    "tree-sitter-cpp~=0.21.0",
    "tree-sitter-rust~=0.21.0",
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
cognee = "src:main"
